--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -22,7 +22,7 @@ import fondoPrincipal from "../assets/fondoPrincipal.png";
     <div class="lg:w-[95%] w-[85%] h-[2px] bg-white/90 mx-auto"></div>
 
     <h2 class="text-white text-xs sm:text-[20px] font-semibold font-Montserrat p-2">
-      El mejor hotel 3 estrellas en La Fortuna, Costa Rica
+      ¡En el corazón de las experiencias!
     </h2>
   </div>
 </div>
