--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Facilities from "@components/Facilities.astro"
 import Header from "@components/Header.astro"
 import Reviews from "@components/Reviews.astro"
 import PageSecond from "@components/PageSecond.astro"
-import Amanities from "@components/Amanities.astro"
+import Amenidades from "@components/Amenidades.astro"
 import Packages from "@components/Packages.astro"
 import Footer from "@components/Footer.astro"
 ---
@@ -17,7 +17,7 @@ import Footer from "@components/Footer.astro"
 	<OurRooms/>
 	<Facilities/>
 	<PageSecond/>
-	<Amanities/>
+	<Amenidades/>
 	<Reviews/>
 	<Packages/>
 	<Footer/>
