--- a/src/components/PageSecond.astro
+++ b/src/components/PageSecond.astro
@@ -1,10 +1,9 @@
 ---
 import { Image } from "astro:assets";
-import fondoTours from "../assets/fondoTours.png";
-import room from "../assets/room1.jpg";
+import fondoTours from "../assets/raftingTours.jpg";
 ---
 
-<div id="infoPaquetes" class="relative w-full h-[300px] md:h-[400px] lg:h-[400px]">
+<div id="infoPaquetes" class="relative w-full h-[300px] md:h-[400px] lg:h-[550px]">
   <Image
     src={fondoTours}
     alt="Jaguar en la selva"
@@ -12,7 +11,7 @@ import room from "../assets/room1.jpg";
   />
 
   <div
-    class="absolute inset-0 flex flex-col items-center justify-center text-center text-white bg-black bg-opacity-30 "
+    class="absolute inset-0 flex flex-col items-center justify-center text-center text-white bg-black bg-opacity-40 "
   >
     <p class="text-4xl md:text-1xl leading-relaxed">Visita La Fortuna</p>
     <h2 class="text-2xl md:text-4xl font-bold leading-relaxed">
